syntax = "proto3";

package warcraft;

import "common/common.proto";
import "warcraft/guild-responses.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft;warcraft";

//

service WarcraftGuildService {
    rpc GetGuilds (common.ListRequest) returns (GetGuildsResponse);
}